--- a/GameDirectory/GameDirectory.vcxproj
+++ b/GameDirectory/GameDirectory.vcxproj
@@ -127,7 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GameDirectory.cpp" />
+    <ClCompile Include="Entries.cpp" />
+    <ClCompile Include="EntryDatabase.cpp" />
+    <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Common.h" />
+    <ClInclude Include="Entries.h" />
+    <ClInclude Include="EntryDatabase.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
