created entry builder class

--- a/GameDirectory/GameDirectory.vcxproj
+++ b/GameDirectory/GameDirectory.vcxproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <ClCompile Include="Database.cpp" />
     <ClCompile Include="Entries.cpp" />
+    <ClCompile Include="EntryBuilders.cpp" />
     <ClCompile Include="EntryDatabase.cpp" />
     <ClCompile Include="EntryUtils.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -138,6 +139,7 @@
     <ClInclude Include="Common.h" />
     <ClInclude Include="Database.h" />
     <ClInclude Include="Entries.h" />
+    <ClInclude Include="EntryBuilders.h" />
     <ClInclude Include="EntryDatabase.h" />
     <ClInclude Include="EntryUtils.h" />
   </ItemGroup>
