--- a/GameDirectory/GameDirectory.vcxproj.filters
+++ b/GameDirectory/GameDirectory.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Database.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EntryBuilders.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Database.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EntryBuilders.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
