--- a/GameDirectory/GameDirectory.vcxproj.filters
+++ b/GameDirectory/GameDirectory.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="EntryBuilders.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DatabaseMaster.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EntryBuilders.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DatabaseMaster.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
