--- a/GameDirectory/GameDirectory.vcxproj.filters
+++ b/GameDirectory/GameDirectory.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Databases">
+      <UniqueIdentifier>{a168ae53-7c02-45e7-a9c5-26bd07c97370}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
@@ -21,20 +24,17 @@
     <ClCompile Include="Entries.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EntryDatabase.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EntryUtils.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Database.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="EntryBuilders.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Database.cpp">
+      <Filter>Databases</Filter>
+    </ClCompile>
+    <ClCompile Include="EntryDatabase.cpp">
+      <Filter>Databases</Filter>
+    </ClCompile>
     <ClCompile Include="DatabaseMaster.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Databases</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -44,20 +44,20 @@
     <ClInclude Include="Entries.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="EntryDatabase.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="EntryUtils.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Database.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EntryBuilders.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Database.h">
+      <Filter>Databases</Filter>
+    </ClInclude>
+    <ClInclude Include="EntryDatabase.h">
+      <Filter>Databases</Filter>
+    </ClInclude>
     <ClInclude Include="DatabaseMaster.h">
-      <Filter>Header Files</Filter>
+      <Filter>Databases</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
