--- a/GameDirectoryUnitTesting/GameDirectoryUnitTesting.vcxproj
+++ b/GameDirectoryUnitTesting/GameDirectoryUnitTesting.vcxproj
@@ -159,16 +159,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DatabaseTesting.cpp" />
-    <ClCompile Include="GameDirectoryUnitTesting.cpp" />
+    <ClCompile Include="EntriesTesting.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TestingCommon.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="TestingCommon.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GameDirectory\GameDirectory.vcxproj">
