--- a/GameDirectoryUnitTesting/GameDirectoryUnitTesting.vcxproj.filters
+++ b/GameDirectoryUnitTesting/GameDirectoryUnitTesting.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GameDirectoryUnitTesting.cpp">
+    <ClCompile Include="EntriesTesting.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
@@ -24,9 +24,15 @@
     <ClCompile Include="DatabaseTesting.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestingCommon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TestingCommon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
