Entry summary tests

--- a/GameDirectoryUnitTesting/GameDirectoryUnitTesting.vcxproj.filters
+++ b/GameDirectoryUnitTesting/GameDirectoryUnitTesting.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="TestingCommon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EntryBuildersTesting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
