--- a/GameDirectoryUnitTesting/GameDirectoryUnitTesting.vcxproj
+++ b/GameDirectoryUnitTesting/GameDirectoryUnitTesting.vcxproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <ClCompile Include="DatabaseTesting.cpp" />
     <ClCompile Include="EntriesTesting.cpp" />
+    <ClCompile Include="EntryBuildersTesting.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
