--- a/GameDirectory/GameDirectory.vcxproj.filters
+++ b/GameDirectory/GameDirectory.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Financials.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FinancialHelpers.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
